--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>TITLE</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="wrapper">
@@ -34,19 +35,34 @@
         </div>
 
         <div class="main">
+            <div class="main-container">
+                <div class="nav-container">
 
-            <div class="nav-container">
+                    <a href="#">Blog</a>
+                    <a href="#">FAQs</a>
+                    <a href="#">Contact Us</a>
+                    <a class="premium-link" href="#">Premium Features</a>
 
-                <a href="#">Blog</a>
-                <a href="#">FAQs</a>
-                <a href="#">Contact Us</a>
-                <a href="#">Premium Features</a>
+                </div>
+
+                <div class="quote-container">
+
+                    <span>"My memory is so bad"</span>
+                    <span>"how bad is it?"</span>
+                    <span>"how bad is what?"</span>
+
+                    <hr width=10% align=right>
+
+                    <i class="fb fa fa-facebook-square"></i>
+                    <i class="twit fa fa-twitter-square"></i>
+
+
+
+                </div>
 
             </div>
 
-            <div class="quote">
 
-            </div>
 
         </div>
 
