--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
                     <hr width=10% align=right>
 
-                    <i class="fb fa fa-facebook-square"></i>
-                    <i class="twit fa fa-twitter-square"></i>
+                    <a href=""><i class="fb fa fa-facebook-square"></i></a>
+                    <a href=""><i class="twit fa fa-twitter-square"></i></a>
 
 
 
